# modbus

./: .gitignore  CMakeLists.txt  CrossCompile.cmake  README  build.sh
libmodbus/: modbus-tcp.c
src/slave/: modbus_slave.cpp
